graph/src/graph/graphblas/lagraph_bindings.rs

unsafe extern "C" {
    #[doc = " LAGr_PageRank: computes the standard PageRank of a directed graph G.  Sinks\n (nodes with no out-going edges) are properly handled.  This method should be\n used for production, not for the GAP benchmark.  This is an Advanced\n algorithm (G->AT and G->out_degree are required).\n\n @param[out] centrality   centrality(i) is the PageRank of node i.\n @param[out] iters        number of iterations taken.\n @param[in] G             input graph.\n @param[in] damping       damping factor (typically 0.85).\n @param[in] tol           stopping tolerance (typically 1e-4).\n @param[in] itermax       maximum number of iterations (typically 100).\n @param[in,out] msg       any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G, centrality, and/our iters are NULL.\n @retval LAGRAPH_NOT_CACHED if G->AT is required but not present,\n      or if G->out_degree is not present.\n @retval LAGRAPH_INVALID_GRAPH Graph is invalid\n              (@sphinxref{LAGraph_CheckGraph} failed).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGr_PageRank(
        centrality: *mut GrB_Vector,
        iters: *mut ::std::os::raw::c_int,
        G: LAGraph_Graph,
        damping: f32,
        tol: f32,
        itermax: ::std::os::raw::c_int,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn LAGr_PageRankGAP(
        centrality: *mut GrB_Vector,
        iters: *mut ::std::os::raw::c_int,
        G: LAGraph_Graph,
        damping: f32,
        tol: f32,
        itermax: ::std::os::raw::c_int,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
#[repr(u32)]
#[doc = " LAGr_TriangleCount_Method: an enum to select the method used to count the\n number of triangles."]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum LAGr_TriangleCount_Method {
    #[doc = "< auto selection of method"]
    LAGr_TriangleCount_AutoMethod = 0,
    #[doc = "< sum (sum ((A^2) .* A)) / 6"]
    LAGr_TriangleCount_Burkhardt = 1,
    #[doc = "< sum (sum ((L * U) .* A)) / 2"]
    LAGr_TriangleCount_Cohen = 2,
    #[doc = "< sum (sum ((L * L) .* L))"]
    LAGr_TriangleCount_Sandia_LL = 3,
    #[doc = "< sum (sum ((U * U) .* U))"]
    LAGr_TriangleCount_Sandia_UU = 4,
    #[doc = "< sum (sum ((L * U') .* L))"]
    LAGr_TriangleCount_Sandia_LUT = 5,
    #[doc = "< sum (sum ((U * L') .* U))"]
    LAGr_TriangleCount_Sandia_ULT = 6,
}
#[repr(i32)]
#[doc = " LAGr_TriangleCount_Presort: an enum to control if/how the matrix is sorted\n prior to counting triangles."]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum LAGr_TriangleCount_Presort {
    #[doc = "< no sort"]
    LAGr_TriangleCount_NoSort = 2,
    #[doc = "< sort by degree, ascending."]
    LAGr_TriangleCount_Ascending = 1,
    #[doc = "< sort by degree, descending."]
    LAGr_TriangleCount_Descending = -1,
    #[doc = "< auto selection of presort:\n< No presort is done for the Burkhardt or Cohen methods, and\n< no sort is done for the Sandia_* methods if the sampled mean\n< out-degree is <= 4 * the sample median out-degree.\n< Otherwise: sort in ascending order for Sandia_LL and Sandia_LUT,\n< descending ordering for Sandia_UU and Sandia_ULT.  On output,\n< presort is modified to reflect the sorting method used (NoSort,\n< Ascending, or Descending)."]
    LAGr_TriangleCount_AutoSort = 0,
}
unsafe extern "C" {
    #[doc = " LAGr_TriangleCount: count the triangles in a graph (advanced API).\n\n @param[out] ntriangles   the number of triangles in G.\n @param[in]  G            The graph, which must be undirected or have\n                          G->is_symmetric_structure true, with no self loops.\n                          G->nself_edges, G->out_degree, and\n                          G->is_symmetric_structure are required.\n @param[in,out] method    specifies which algorithm to use, and returns\n                          the method chosen.  If NULL, the AutoMethod is\n                          used, and the method is not reported.  Also see the\n                          LAGr_TriangleCount_Method enum description.\n @param[in,out] presort   controls the presort of the graph, and returns the\n                          presort chosen.  If NULL, the AutoSort is used, and\n                          the presort method is not reported.  Also see the\n                          description of the LAGr_TriangleCount_Presort enum.\n @param[in,out] msg       any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G or ntriangles are NULL.\n @retval LAGRAPH_INVALID_GRAPH Graph is invalid\n              (@sphinxref{LAGraph_CheckGraph} failed).\n @retval LAGRAPH_NO_SELF_EDGES_ALLOWED if G has any self-edges, or if\n      G->nself_edges is not computed.\n @retval LAGRAPH_SYMMETRIC_STRUCTURE_REQUIRED if G is directed with an\n      unsymmetric G->A matrix.\n @retval LAGRAPH_NOT_CACHED if G->out_degree is not present in G.\n @retval GrB_INVALID_VALUE method or presort are invalid.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGr_TriangleCount(
        ntriangles: *mut u64,
        G: LAGraph_Graph,
        method: *mut LAGr_TriangleCount_Method,
        presort: *mut LAGr_TriangleCount_Presort,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
